packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/wld-004-two-staging.ttrp
// expect: TTRP-WLD-004
// models: two-staging
uses world "acme.worlds.dev"
container c target polars { }
